--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,5 +10,8 @@ License: What license is it under?
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
+Imports:
+  MASS, gsl
 Suggests:
-  bootmi
+    bootmi,
+    testthat
