--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,7 +11,9 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
 Imports:
-  MASS, gsl
+    MASS,
+    gsl,
+    norm
 Suggests:
     bootmi,
     testthat
