--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,13 @@
 Package: mlmi
 Type: Package
 Title: Maximum Likelihood Multiple Imputation
-Version: 0.1.0
-Author: Who wrote it
-Maintainer: Jonathan W. Bartlett <j.w.bartlett@bath.ac.uk>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Version: 1.0.0
+Author: Jonathan Bartlett
+Maintainer: Jonathan Bartlett <j.w.bartlett@bath.ac.uk>
+Description: mlmi implements so called Maximum Likelihood Multiple Imputation as described by von Hippel (2018) <arXiv:1210.0870v9>. A number of different imputations are available, by utilising the norm, cat and mix packages. Inferences can be performed either using combination rules similar to Rubin's or using a likelihood score based approach based on theory by Wang N and Robins JM (1998) <doi:10.1093/biomet/85.4.935>.
+Depends:
+    R (>= 2.10)
+License: GPL-3
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
