Adding example dataset, documenting it, and adding example code to refBasedCts function.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(catImp)
 export(mixImp)
 export(normImp)
 export(normUniImp)
+export(refBasedCts)
 export(scoreBased)
 export(withinBetween)
 import(stats)
