--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,16 +1,18 @@
 Package: mlmi
 Type: Package
 Title: Maximum Likelihood Multiple Imputation
-Version: 1.1.2
-Author: Jonathan Bartlett
-Maintainer: Jonathan Bartlett <jonathan.bartlett1@lshtm.ac.uk>
-Description: Implements so called Maximum Likelihood Multiple Imputation as described by von Hippel and Bartlett (2021) <doi:10.1214/20-STS793>. A number of different imputations are available, by utilising the 'norm', 'cat' and 'mix' packages. Inferences can be performed either using combination rules similar to Rubin's or using a likelihood score based approach based on theory by Wang and Robins (1998) <doi:10.1093/biomet/85.4.935>.
+Version: 1.1.3
+Authors@R: person(given = "Jonathan",
+                    family = "Bartlett",
+                    role = c("aut", "cre"),
+                    email = "jonathan.bartlett1@lshtm.ac.uk")
+Description: Implements proper and so-called Maximum Likelihood Multiple Imputation as described by von Hippel and Bartlett (2021) <doi:10.1214/20-STS793>. A number of different imputation methods are available, by utilising the 'norm', 'cat' and 'mix' packages. Inferences can be performed either using Rubin's rules (for proper imputation), or a modified version for maximum likelihood imputation. For maximum likelihood imputations a likelihood score based approach based on theory by Wang and Robins (1998) <doi:10.1093/biomet/85.4.935> is also available.
 Depends:
     R (>= 2.10)
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.2.3
+RoxygenNote: 7.3.3
 Imports:
     MASS,
     gsl,
